--- a/src/layouts/root.astro
+++ b/src/layouts/root.astro
@@ -1,3 +1,8 @@
+---
+import '@/styles/global.css'
+import { Font } from 'astro:assets'
+---
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -5,18 +10,16 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro Basics</title>
+    <title>Arrudadev</title>
+    <Font cssVariable="--font-geist" preload />
   </head>
-  <body>
+  <body class="dark">
     <slot />
   </body>
 </html>
 
 <style>
-  html,
   body {
-    margin: 0;
-    width: 100%;
-    height: 100%;
+    font-family: var(--font-geist);
   }
 </style>
