--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
-import Welcome from '../components/Welcome.astro'
-import Layout from '../layouts/Layout.astro'
+import { Button } from '@/components/ui/button'
+import RootLayout from '@/layouts/root.astro'
 ---
 
-<Layout>
-  <Welcome />
-</Layout>
+<RootLayout>
+  <div class="h-screen w-screen flex justify-center items-center">
+    <Button> Click Me! </Button>
+  </div>
+</RootLayout>
